--- a/templates/login.gohtml
+++ b/templates/login.gohtml
@@ -33,7 +33,7 @@
 <body>
 
 <div class="container">
-    <form action="/" method="post" class="form-signin text-center">
+    <form action="/login" method="post" class="form-signin text-center">
         <img src="/static/img/music.PNG" alt="" width="72" height="72">
         <h2 class="form-signin-heading">Please sign in</h2>
         <label for="inputEmail" class="sr-only">Email address</label>
@@ -47,7 +47,7 @@
         </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
         <p>
-        {{.Message}}
+        {{.Error}}
         </p>
     </form>
 </div> <!-- /container -->
